fix(replies): floated image thumbnails weren't clickable when wrapped by markdown content

--- a/src/components/post/thumbnail/thumbnail.module.css
+++ b/src/components/post/thumbnail/thumbnail.module.css
@@ -5,6 +5,7 @@
   width: 70px;
   height: var(--height, 70px);
   z-index: 1;
+  position: relative;
 }
 
 .thumbnailHidden {
